# practiceC

./: CMakeLists.txt  Positive Negative Number  README.md  area of rectangle  bmi calc  celsius or fahrenheit  leap year  num of digits  num of digits counter  odd or even  pow calculation  print 1 to 10  rev of num  star pyramid  sum of first n num  vowel or constant
basic/: area_of_rectangle.c  fahrenheit to celsius  fahrenheit_to_celsius.c
decision making/: divisible_by_both_3_and_5.c  grade_evaluation.c  largest_of_3_num.c  simpl calc  simpl_calc.c  vowel_or_constant.c
fn/: diff of 2 num  divide.c  factorial_fn.c  modulus.c  mul of 2 num  palindrome.c  palindromefn.c  primecheckfn.c  sum of 2 nums
loop/: occurrences of a digit
loops/: armstrong num  divisors_of_a_num.c  factorial.c  fibonacci series  highest common factor  lcm_of_2_numbers.c  multiplication table generator  num_of_digits.c  num_pyramid.c  palindrome num  prime num checker  star right triangle  sum_of_digits.c
